syntax = "proto3";

option java_multiple_files = false;
option java_package = "com.xioahe";
option java_outer_classname = "HelloProto";

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  // 响应的消息
  string result = 1;
}
service HelloService {
  rpc hello(HelloRequest) returns (HelloResponse) {};
}